<resources>
    <string name="app_name">TheMovieCatcher</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings_label">Settings</string>
    <string name="movie_id">movie_id</string>
    <string name="movie_desctiption">movie_description</string>
    <string name="detail_frag_description">Description :</string>
    <string name="release_date">Release date :</string>
    <string name="rate">Rate : </string>
    <string name="title_activity_settings">Settings</string>
    <string name="content_authority">com.itcherry.themoviecatcher</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_last_notification">last_notification</string>
    <string name="pref_last_backdrop">last_backdrop</string>
    <string name="notification_preference">Notifications</string>
    <string name="key_notification">notification_preference_key</string>
    <string name="pref_summary_on">On</string>
    <string name="pref_summary_off">Off</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_sorting">Sorting</string>
    <string name="pref_sorting_key">sorting</string>
    <string name="menu_refresh">Refresh</string>
    <string name="pref_sorting_default">top_rated?</string>
    <string name="sync_account_type">moviecatcher.itcherry.com</string>
    <string name="bundle_page_key">page_key</string>
    <string name="pref_last_page">last_page</string>
    <string name="pref_last_row_quantity">last_row_quantity</string>
    <string name="pref_is_connected_to_network">network_available</string>
    <string name="loading_tv">Loading...</string>
    <string name="pref_last_update_flag">last_update_flag</string>
    <string name="menu_favourite_title">Favourite</string>
    <string name="no_network_connection_textview">No network connection :(</string>
    <string name="open_network_button">Enable mobile network</string>
    <string name="open_wifi_button">Enable WiFi</string>
    <string name="no_network_image_descr">No network connection</string>
    <string name="empty_extra_textview">or</string>
    <string name="no_network_tv">No network</string>
    <string name="no_network_footer_button_text">Repeat</string>

</resources>
