<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/no_network_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_network_image_descr"
            android:src="@drawable/ic_close_network_grey600_48dp" />

        <TextView
            style="@style/Theme.AppCompat.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_network_connection_textview"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/open_network_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_network_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_extra_textview" />

            <Button
                android:id="@+id/open_wifi_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_wifi_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>