<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_frag_description"
        android:id="@+id/tvDescription"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTextDescription"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:id="@+id/tvReleaseDate"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvTextDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTextReleaseDate"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_above="@+id/tvCountRate"
        android:layout_toRightOf="@+id/tvReleaseDate"
        android:layout_toEndOf="@+id/tvReleaseDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:id="@+id/tvRate"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvTextReleaseDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCountRate"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@+id/tvReleaseDate" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/tvRate"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNumberRate"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>